Add steps section

--- a/recipes/buffalo-chicken-wraps.html
+++ b/recipes/buffalo-chicken-wraps.html
@@ -17,6 +17,7 @@
 
     <h2>Ingredients</h2>     
     <ul>
+        <li>1 tbs Olive Oil</li>
         <li>1 lb Chicken Breast</li>
         <li>1 cup Frank's Red Hot (or buffalo sauce of your choice)</li>
         <li>1 bag Cole Slaw Mix</li>
@@ -24,6 +25,19 @@
         <li>1 cup Low Fat Blue Cheese Salad Dressing</li>
     </ul>
     
+    <h2>Steps</h2>
+    <ol>
+        <li>Cut Chicken Breast into 1 inch cubes.</li>
+        <li>Heat a frying pan over medium heat until hot and add olive oil</li>
+        <li>Add chicken to frying pan and stir frequently to prevent sticking</li>
+        <li>While chicken is cooking: Mix Cole Slaw mix and Blue Cheese dressing in a medium sized bowl.</li>
+        <li>When chicken reaches 160 F remove from heat and place in an empty medium sized bowl.</li>
+        <li>Toss chicken in Frank's Red Hot until all pieces are coated.</li>
+        <li>Divide chicken equally between the toritllas.</li>
+        <li>Evenly divide cole slaw mix on top of chicken in the tortillas.</li>
+        <li>Roll the tortillas up into wraps.</li>
+        <li>Store in food prep containers or ziploc bags, with two wraps per serving and refigerate.</li>
+    </ol>
 
 </body>
 </html>
