Fix typo in ingredients

--- a/recipes/buffalo-chicken-wraps.html
+++ b/recipes/buffalo-chicken-wraps.html
@@ -17,7 +17,7 @@
 
     <h2>Ingredients</h2>     
     <ul>
-        <li>1 tbs Olive Oil</li>
+        <li>1 tbsp Olive Oil</li>
         <li>1 lb Chicken Breast</li>
         <li>1 cup Frank's Red Hot (or buffalo sauce of your choice)</li>
         <li>1 bag Cole Slaw Mix</li>
