--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 
 <h1>Odin Recipes</h1>
-<a href="./recipes/buffalo-chicken-wraps.html">Buffalo Chicken Wraps</a>
-
+<ul>
+    <li><a href="./recipes/buffalo-chicken-wraps.html">Buffalo Chicken Wraps</a></li>
+    <li><a href="./recipes/taco-soup.html">Taco Soup</a></li>
+</ul>
 </body>
 
 </html>
