Add smores-pie.html and link to page on index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <ul>
     <li><a href="./recipes/buffalo-chicken-wraps.html">Buffalo Chicken Wraps</a></li>
     <li><a href="./recipes/taco-soup.html">Taco Soup</a></li>
+    <li><a href="./recipes/smores-pie.html">S'mores Pie</a></li>
 </ul>
 </body>
 
