Add styles to css to demonstrate knowledge

--- a/recipes/smores-pie.html
+++ b/recipes/smores-pie.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>S'mores Pie</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F284339.jpg&w=595&h=595&c=sc&poi=face&q=60&orient=true" alt="A piece of chocolate pie with whipped cream on a ghram cracker crust.">
+    <img class="picture" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F284339.jpg&w=595&h=595&c=sc&poi=face&q=60&orient=true" alt="A piece of chocolate pie with whipped cream on a ghram cracker crust.">
 
     <h2>Description</h2>
     <p>A quick and easy tasty treat for the chocolate and pie lovers in your family.</p>
