--- a/recipes/taco-soup.html
+++ b/recipes/taco-soup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Taco Soup</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9428854.jpg&w=595&h=791&c=sc&poi=face&q=60&orient=true" alt="Taco soup with sour cream topping">
+    <img class="picture" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9428854.jpg&w=595&h=791&c=sc&poi=face&q=60&orient=true" alt="Taco soup with sour cream topping">
 
     <h2>Description</h2>
 
